# github_trending_api

./: README.md  pyproject.toml  requirements.txt
application/: __init__.py  dev.py  main.py  repo.py  scraping.py
