[tool.poetry]
name = "github_trending_api"
version = "0.1.0"
description = ""
authors = ["iorjunior <juniorcoda@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
